Replace Higher Ed menu with Technology menu

--- a/src/app/pages/home/education/education.html
+++ b/src/app/pages/home/education/education.html
@@ -10,7 +10,7 @@
         <div class="links">
             <ul>
                 <li>
-                    <a class="btn btn-large btn-orange higher-ed" href="{model.block1.link}">
+                    <a class="btn btn-large btn-orange" href="{model.block1.link}">
                         <span class="title">{model.block1.heading}</span>
                         <span class="blurb" data-html="block1.content" skip="true"></span>
                     </a>
