--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -26,14 +26,17 @@
                 <li role="presentation"><a href="/subjects/ap" role="menuitem" tabindex="-1">AP<sup>®</sup></a></li>
             </ul>
         </li>
-        <li class="nav-menu-item" role="presentation">
-            <a href="/higher-ed" role="menuitem">Higher Education</a>
+        <li class="nav-menu-item dropdown" role="presentation">
+            <a href="/technology" role="menuitem" aria-haspopup="true">Technology<svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
+            <ul class="dropdown-menu" role="menu" aria-expanded="{model.openDropdown === 'technology'}" aria-label="Technology menu">
+                <li role="presentation"><a href="/openstax-tutor" role="menuitem" tabindex="-1">About OpenStax Tutor</a></li>
+                <li role="presentation"><a href="/partners" role="menuitem" tabindex="-1">OpenStax Partners</a></li>
+            </ul>
         </li>
         <li class="nav-menu-item dropdown" role="presentation">
             <a href="/impact" role="menuitem" aria-haspopup="true">Our Impact<svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
             <ul class="dropdown-menu" role="menu" aria-expanded="{model.openDropdown === 'impact'}" aria-label="Our Impact menu">
                 <li role="presentation"><a href="/impact" role="menuitem" tabindex="-1">Explore Our Impact</a></li>
-                <li role="presentation"><a href="/partners" role="menuitem" tabindex="-1">Partners</a></li>
                 <li role="presentation"><a href="/foundation" role="menuitem" tabindex="-1">Foundation Support</a></li>
             </ul>
         </li>
