--- a/src/app/pages/technology/technology.scss
+++ b/src/app/pages/technology/technology.scss
@@ -122,6 +122,7 @@
             background-size: contain;
             bottom: 0;
             height: 80%;
+            pointer-events: none;
             position: absolute;
             right: calc(6% - 15rem);
             width: calc(100% + 15rem);
