--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -107,7 +107,7 @@
             </if>
             <if condition="model.book_allies.length">
                 <div id="partner-resources" class="row">
-                    <h3>Partner Resources</h3>
+                    <h3>Technology</h3>
                     <p>
                     OpenStax Partners provide additional, low-cost resources for your
                     book. See what's offered for this title below and learn more about
