--- a/src/app/pages/renew/renew.html
+++ b/src/app/pages/renew/renew.html
@@ -72,7 +72,7 @@
                         Other
                         <span class="invalid-message">{model.validationMessage('00NU0000005Vls8')}</span>
                         <input name="00NU0000005Vls8" class="short" type="text"
-                        placeholder="Technologies not listed above?">
+                        placeholder="Technology not listed above?">
                     </label>
 
                     <plug-in data-id="partnerContact" skip="true"></plug-in>
