--- a/src/app/pages/technology/technology.html
+++ b/src/app/pages/technology/technology.html
@@ -17,17 +17,17 @@
             <div class="student-overlay"></div>
         </section>
         <section id="steps">
+            <div id="steps-target"></div>
             <div class="text-content">
                 <h2>{model.steps.headline}</h2>
             </div>
             <div class="boxed-row">
                 <div each="step in model.steps.items" class="step">
                     <h3>{1 + $item}.</h3>
-                    <div>{step.headline}</div>
                     <book-selector if="step.selector" skip="true"></book-selector>
                     <div if="step.description" class="outlined btn {step.url ? '' : 'dimmed'}">
                         <if condition="step.url">
-                            <a href="{`${step.url}${step.hash}`}">{step.description}</a>
+                            <a href="{`${step.url}${step.hash}`}" target="_blank">{step.description}</a>
                         <else>
                             {step.description}
                         </if>
