--- a/src/app/pages/technology/technology.scss
+++ b/src/app/pages/technology/technology.scss
@@ -46,10 +46,15 @@
         .boxed {
             display: block;
             min-height: inherit;
+            padding-bottom: 8rem;
             position: relative;
 
             @include phone {
                 padding: 0;
+            }
+
+            @include tablet {
+                padding-bottom: 12rem;
             }
         }
 
@@ -75,6 +80,7 @@
                 @include phone {
                     height: 100%;
                     min-height: 40rem;
+                    padding-bottom: calc(50vw + 4rem);
                 }
 
                 @include desktop {
@@ -85,10 +91,6 @@
 
             .description {
                 max-width: 50rem;
-
-                @include phone {
-                    max-width: 70%;
-                }
             }
         }
 
@@ -121,7 +123,7 @@
             background-repeat: no-repeat;
             background-size: contain;
             bottom: 0;
-            height: 80%;
+            height: 75%;
             pointer-events: none;
             position: absolute;
             right: calc(6% - 15rem);
@@ -137,6 +139,12 @@
 
         @include phone {
             padding: 4rem;
+        }
+
+        #steps-target {
+            height: 0;
+            position: relative;
+            top: -20vh;
         }
 
         h2 {
@@ -159,6 +167,11 @@
             flex-basis: 100%;
             flex-direction: column;
             margin: 0 1.5rem;
+            padding: 1.5rem 0;
+
+            @include desktop {
+                padding: 0;
+            }
 
             h3 {
                 color: color(gold);
@@ -192,8 +205,9 @@
     }
 
     #tutor {
-        min-height: 40rem;
-        padding-bottom: 0;
+        min-height: 48vw;
+        overflow-y: hidden;
+        padding: 0;
         position: relative;
 
         .header {
@@ -201,15 +215,18 @@
             width: 100%;
 
             img {
-                margin-top: 1rem;
+                margin-top: 2rem;
                 min-width: 20rem;
                 width: 20%;
             }
         }
 
         .border-image {
-            transform: translate(-5.5%, 4%);
+            bottom: 0;
+            left: -5.6%;
+            position: absolute;
             width: 108%;
+            z-index: -1;
         }
 
         .btn {
@@ -224,15 +241,23 @@
         }
 
         .at-the-bottom {
-            bottom: 10%;
             left: 0;
-            position: absolute;
+            padding-bottom: 1.5rem;
+            position: relative;
+            top: 0;
             width: 100%;
             z-index: 2;
 
             @include phone {
-                position: relative;
-                top: 3rem;
+                margin-bottom: 4rem;
+                margin-top: 2rem;
+                position: static;
+            }
+
+
+            @include desktop {
+                min-height: 40vw;
+                top: calc(15vw - 10rem);
             }
 
             .boxed {
